# robotkol_desktop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: main_window.glade  main_window.glade~
res/robotkol_desktop/src/robotkol_desktop/: README.md
robotel_desktop/: CMakeLists.txt  robotel_desktop.cpp  robotel_desktop.h
src/: CMakeLists.txt  axis.cc  axis.h  main.cc  main_window.cc  main_window.h  recorder.h  rk_application.cc  rk_application.h  robot_interface.h
